cmake_minimum_required(VERSION 3.13)


if (${ARCH_NAME} STREQUAL "armv7_8m")
    add_subdirectory(modbus)
    add_subdirectory(mlibc)
    add_subdirectory(mr)
    # add_subdirectory(at_device)
elseif(${CONFIG_ARCH} STREQUAL "aarch64")
    add_subdirectory(mkrtos-musl)
endif()
add_subdirectory(sys)
add_subdirectory(sys_util)
add_subdirectory(util)
add_subdirectory(sys_svr)
add_subdirectory(libc_backend)
add_subdirectory(cpio)
add_subdirectory(letter-shell/demo/mkrtos)
add_subdirectory(printf)
add_subdirectory(lwip)
add_subdirectory(cJSON)
add_subdirectory(cutest)

